# ros2_galactic_waveshare_adc_lib

./: CMakeLists.txt  package.xml
include/: DEV_Config.h
src/: ADS1256.c  DEV_Config.c
